myNodejsApp/kubernetes/service2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service2-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service2
  template:
    metadata:
      labels:
        app: service2
    spec:
      containers:
        - name: service2
          image: service2:1.0
          ports:
            - containerPort: 3002
