myNodejsApp/kubernetes/service3.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service3-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service3
  template:
    metadata:
      labels:
        app: service3
    spec:
      containers:
        - name: service3
          image: service3:1.0
          ports:
            - containerPort: 3003
