myNodejsApp/kubernetes/service1_service.yml
apiVersion: v1
kind: Service
metadata:
  name: service1
spec:
  ports:
    - protocol: TCP
      port: 3001
      targetPort: 3001
  selector:
    app: service1
