myNodejsApp/kubernetes/service2_service.yml
apiVersion: v1
kind: Service
metadata:
  name: service2
spec:
  ports:
    - protocol: TCP
      port: 3002
      targetPort: 3002
  selector:
    app: service2
