myNodejsApp/kubernetes/service3_service.yml
apiVersion: v1
kind: Service
metadata:
  name: service3
spec:
  ports:
    - protocol: TCP
      port: 3003
      targetPort: 3003
  selector:
    app: service3
