myNodejsApp/kubernetes/dep.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
spec:
  rules:
    - http:
        paths:
          - path: /service1
            pathType: Prefix
            backend:
              service:
                name: service1
                port:
                  number: 3001
          - path: /service2
            pathType: Prefix
            backend:
              service:
                name: service2
                port:
                  number: 3002
          - path: /service3
            pathType: Prefix
            backend:
              service:
                name: service3
                port:
                  number: 3003
---
apiVersion: v1
kind: Service
metadata:
  name: service1
spec:
  selector:
    app: service1
  ports:
    - protocol: TCP
      port: 3001
      targetPort: 3001
---
apiVersion: v1
kind: Service
metadata:
  name: service2
spec:
  selector:
    app: service2
  ports:
    - protocol: TCP
      port: 3002
      targetPort: 3002
---
apiVersion: v1
kind: Service
metadata:
  name: service3
spec:
  selector:
    app: service3
  ports:
    - protocol: TCP
      port: 3003
      targetPort: 3003
