myNodejsApp/kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
spec:
  rules:
    - host: bth98.com
      http:
        paths:
          - path: /service1
            pathType: Prefix
            backend:
              service:
                name: service1
                port:
                  number: 3001
          - path: /service2
            pathType: Prefix
            backend:
              service:
                name: service2
                port:
                  number: 3002
          - path: /service3
            pathType: Prefix
            backend:
              service:
                name: service3
                port:
                  number: 3003
